# storage/api-docs/api-docs.json
@@ -476,6 +476,62 @@
             }
         },
         "/api/mails": {
+            "get": {
+                "tags": [
+                    "Mail"
+                ],
+                "summary": "Retrieve a list of mails",
+                "description": "Returns a list of mails",
+                "operationId": "getMails",
+                "parameters": [
+                    {
+                        "name": "skip",
+                        "in": "query",
+                        "description": "Number of records to skip",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Maximum number of records to return",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Mails retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "data": {
+                                            "type": "array",
+                                            "items": {
+                                                "$ref": "#/components/schemas/Mail"
+                                            }
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Mails retrieved successfully"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            },
             "post": {
                 "tags": [
                     "Mail"
@@ -668,13 +724,13 @@
                 }
             }
         },
-        "/plans": {
+        "/api/plans": {
             "get": {
                 "tags": [
                     "Plans"
                 ],
                 "summary": "Display a listing of the Plans",
-                "operationId": "1d9df9f5b7f06bbb7198d9437cdec1eb",
+                "operationId": "728f6bffaab2c55b6ab73e353ec6e954",
                 "parameters": [
                     {
                         "name": "skip",
@@ -717,7 +773,7 @@
                     "Plans"
                 ],
                 "summary": "Store a newly created Plan in storage",
-                "operationId": "5899c91b953558fafbe558b86bf18b58",
+                "operationId": "13838830de12c4e652a6309566b40806",
                 "requestBody": {
                     "required": true,
                     "content": {
@@ -1834,6 +1890,78 @@
                 }
             }
         },
+        "/api/collaborations/invite": {
+            "post": {
+                "tags": [
+                    "Collaborations"
+                ],
+                "summary": "Invite an agent to collaborate",
+                "description": "Invite an agent to collaborate with the user.",
+                "operationId": "inviteCollaboration",
+                "requestBody": {
+                    "required": true,
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "properties": {
+                                    "user_id": {
+                                        "description": "ID of the user",
+                                        "type": "integer"
+                                    },
+                                    "agent_id": {
+                                        "description": "ID of the agent",
+                                        "type": "integer"
+                                    }
+                                },
+                                "type": "object"
+                            }
+                        }
+                    }
+                },
+                "responses": {
+                    "200": {
+                        "description": "Agent Invited",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": true
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Agent Invited"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Already Collaborated",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "properties": {
+                                        "success": {
+                                            "type": "boolean",
+                                            "example": false
+                                        },
+                                        "message": {
+                                            "type": "string",
+                                            "example": "Already Collaborated"
+                                        }
+                                    },
+                                    "type": "object"
+                                }
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/property-boards": {
             "get": {
                 "tags": [
@@ -2403,6 +2531,97 @@
                                 }
                             }
                         }
+                    }
+                }
+            }
+        },
+        "/users": {
+            "get": {
+                "tags": [
+                    "Users"
+                ],
+                "summary": "Display a listing of the Users",
+                "description": "Retrieve a list of users with optional pagination",
+                "operationId": "getUsersList",
+                "parameters": [
+                    {
+                        "name": "skip",
+                        "in": "query",
+                        "description": "Number of records to skip for pagination",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    },
+                    {
+                        "name": "limit",
+                        "in": "query",
+                        "description": "Number of records to return",
+                        "required": false,
+                        "schema": {
+                            "type": "integer"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "Users retrieved successfully",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "type": "array",
+                                    "items": {
+                                        "properties": {
+                                            "id": {
+                                                "type": "integer",
+                                                "example": 1
+                                            },
+                                            "name": {
+                                                "type": "string",
+                                                "example": "John Doe"
+                                            },
+                                            "email": {
+                                                "type": "string",
+                                                "example": "johndoe@example.com"
+                                            },
+                                            "number": {
+                                                "type": "string",
+                                                "example": "+123456789"
+                                            },
+                                            "agency_name": {
+                                                "type": "string",
+                                                "example": "Agency XYZ"
+                                            },
+                                            "lang": {
+                                                "type": "string",
+                                                "example": "en"
+                                            },
+                                            "timezone": {
+                                                "type": "string",
+                                                "example": "UTC"
+                                            },
+                                            "profile_url": {
+                                                "type": "string",
+                                                "example": "http://example.com/profile.jpg"
+                                            }
+                                        },
+                                        "type": "object"
+                                    }
+                                }
+                            }
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request"
+                    },
+                    "401": {
+                        "description": "Unauthorized"
+                    },
+                    "403": {
+                        "description": "Forbidden"
+                    },
+                    "404": {
+                        "description": "Not Found"
                     }
                 }
             }
@@ -3069,6 +3288,28 @@
                     },
                     "description": {
                         "description": "Description or notes about the contact",
+                        "type": "string"
+                    }
+                },
+                "type": "object"
+            },
+            "Mail": {
+                "required": [
+                    "id",
+                    "subject",
+                    "body"
+                ],
+                "properties": {
+                    "id": {
+                        "description": "ID of the mail",
+                        "type": "integer"
+                    },
+                    "subject": {
+                        "description": "Subject of the mail",
+                        "type": "string"
+                    },
+                    "body": {
+                        "description": "Body of the mail",
                         "type": "string"
                     }
                 },
